pkg/lang/syntax/testdata/ub/validate/invalid/factory/state-moves-invalid-ref-segments.ub
factory: {
  state-moves: [
    { from: resource.items[old], to: resource.items.new }
  ]
}
